# chain-extension-contracts

./: Cargo.toml  README.md  package.json  rust-toolchain.toml
contracts/psp22_pallet_wrapper/: Cargo.toml  lib.rs
crates/assets/: Cargo.toml  lib.rs
crates/dapps-staking/: Cargo.toml
crates/scheduler/: Cargo.toml  lib.rs
examples/assets/: Cargo.toml  lib.rs
examples/dapps-staking/: Cargo.toml
examples/scheduler/: Cargo.toml  lib.rs
patches/: @727-ventures+typechain-compiler+0.5.10.patch
tests/: assets.spec.ts  psp22-pallet-wrapper.spec.ts
