[package]
name = "scheduler_example"
version = "0.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

scheduler_extension = { path = "../../crates/scheduler", default-features = false }

[dev-dependencies]
ink_e2e = { version = "4.2.0" }
subxt = { version = "0.28.0", default-features = false }

[lib]
name = "scheduler_example"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "scheduler_extension/std",
]
ink-as-dependency = []
e2e-tests = []